--- a/Loungeware/datafiles/config.example.json
+++ b/Loungeware/datafiles/config.example.json
@@ -2,8 +2,6 @@
 // if config.dev.json exists, the game will read it.
 {
     "test_mode_on": false,  // Default false | Whether or not to run the game in test mode
-    "microgame_key": "",    // Default ""    | The key for your game, as a string. ("key" meaning the property name for your game in the metadata)
-    "loop_game": false,     // Default false | Whether or not to instantly restart the test microgame when it ends
-    "difficulty_level": 1,  // Default 1     | The difficulty level to run the test at (1-5). 
-    "mute_test": false     // Default false | if true, mutes all audio when running the game in test mode
+    "microgame_key": "",   // Default ""    | The key for your game, as a string. ("key" meaning the property name for your game in the metadata)
+    "config_example_version": 1    // LEAVE THIS VALUE THE SAME AS IT IS IN THE EXAMPLE (it is for checking if your config is out of date)
 }
