--- a/Web/package.json
+++ b/Web/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "yarn lint && vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "extract": "node scripts/extractGameMetadata.js"
   },
   "dependencies": {
     "@drewbot/sass-flexbox-grid": "^2.0.7",
@@ -31,6 +32,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "json5": "^2.2.0",
+    "pegjs": "^0.10.0",
     "prettier": "^2.2.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
