--- a/Web/package.json
+++ b/Web/package.json
@@ -14,6 +14,7 @@
     "@graphql-codegen/typescript": "^2.1.0",
     "@mdi/js": "^5.9.55",
     "@playlyfe/gql": "^2.6.2",
+    "@types/vue-moment": "^4.0.3",
     "apollo-boost": "^0.4.9",
     "core-js": "^3.6.5",
     "firebase": "^8.10.0",
@@ -23,6 +24,7 @@
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.7",
     "vue-class-component": "^7.2.3",
+    "vue-moment": "^4.1.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
