--- a/Web/package.json
+++ b/Web/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.7",
     "vue-class-component": "^7.2.3",
+    "vue-meta": "^2.4.0",
     "vue-moment": "^4.1.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
