--- a/gmlint.yaml
+++ b/gmlint.yaml
@@ -2,4 +2,5 @@ allow:
  - "inconsistent-indentation"
  - "bad-tab-style"
 banned:
- - audio_play_sound
+ - [audio_play_sound, sfx_play]
+ - [audio_stop_dound, sfx_stop]
