--- a/gmlint.yaml
+++ b/gmlint.yaml
@@ -1,5 +1,7 @@
 allow:
  - "inconsistent-indentation"
+ - "bad-tab-style"
 banned:
  - [audio_play_sound, sfx_play]
  - [audio_stop_dound, sfx_stop]
+ - [katsaii_wandaring_rf3d_set_orientation, joe_mama]
