--- a/.github/workflows/GMLint.yml
+++ b/.github/workflows/GMLint.yml
@@ -22,6 +22,9 @@ jobs:
             echo '```' >> $OUT
           fi
           MESSAGE="$(cat $OUT)"
+          MESSAGE="${MESSAGE//'%'/'%25'}"
+          MESSAGE="${MESSAGE//$'\n'/'%0A'}"
+          MESSAGE="${MESSAGE//$'\r'/'%0D'}"
           echo "::set-output name=result::$MESSAGE"
       - name: Comment on PR
         uses: NejcZdovc/comment-pr@v1
