--- a/.github/workflows/GMLint.yml
+++ b/.github/workflows/GMLint.yml
@@ -1,7 +1,7 @@
 name: GMLint
 on:
-  pull_request:
-    branches: [pull_request_target]
+  pull_request_target:
+
 jobs:
   check:
     runs-on: ubuntu-latest
