--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
 *.yy  linguist-language=Json
 *.yyp linguist-language=Json
+
+# We'll let Git's auto-detection algorithm infer if a file is text. If it is,
+# enforce LF line endings regardless of OS or git configurations.
+* text=auto eol=lf
+
+# Isolate binary files in case the auto-detection algorithm fails and
+# marks them as text files (which could brick them).
+*.{png,jpg,jpeg,gif,webp,woff,woff2} binary
